[CI] Publish Documentation for 6c45816d53837688dd2e6ca8d5e5c7c2c3e6882b - 6c45816d53837688dd2e6ca8d5e5c7c2c3e6882b 🚀

--- a/ansible-operator-road-trip-guide/main/01-setup-tools.html
+++ b/ansible-operator-road-trip-guide/main/01-setup-tools.html
@@ -79,9 +79,6 @@
   <li class="nav-item" data-depth="2">
     <a class="nav-link" href="02-setup-project.html#create-project-folder">Create the operator project</a>
   </li>
-  <li class="nav-item" data-depth="2">
-    <a class="nav-link" href="02-setup-project.html#setup-python-venv">Setup a Python virtual environment</a>
-  </li>
 </ul>
   </li>
   <li class="nav-item" data-depth="1">
@@ -89,7 +86,46 @@
     <a class="nav-link" href="03-building-your-1st-operator.html">Building your 1st operator</a>
 <ul class="nav-list">
   <li class="nav-item" data-depth="2">
-    <a class="nav-link" href="03-building-your-1st-operator.html#setup-environment">Set up the environment</a>
+    <a class="nav-link" href="03-building-your-1st-operator.html#create-operator-scaffold">Create the operator scaffold</a>
+  </li>
+  <li class="nav-item" data-depth="2">
+    <a class="nav-link" href="03-building-your-1st-operator.html#create-an-api">Create an API</a>
+  </li>
+  <li class="nav-item" data-depth="2">
+    <a class="nav-link" href="03-building-your-1st-operator.html#setup-python-venv">Setup a Python venv</a>
+  </li>
+  <li class="nav-item" data-depth="2">
+    <a class="nav-link" href="03-building-your-1st-operator.html#init-repo">Init the git repo</a>
+  </li>
+  <li class="nav-item" data-depth="2">
+    <a class="nav-link" href="03-building-your-1st-operator.html#enhance-your-makefile">Enhance your Makefile</a>
+  </li>
+  <li class="nav-item" data-depth="2">
+    <button class="nav-item-toggle"></button>
+    <a class="nav-link" href="03-building-your-1st-operator.html#configuring-operator">Configuring operator</a>
+<ul class="nav-list">
+  <li class="nav-item" data-depth="3">
+    <a class="nav-link" href="03-building-your-1st-operator.html#adding-permissions-on-configmaps">Adding permissions</a>
+  </li>
+  <li class="nav-item" data-depth="3">
+    <a class="nav-link" href="03-building-your-1st-operator.html#updating-categories">Updating categories</a>
+  </li>
+  <li class="nav-item" data-depth="3">
+    <a class="nav-link" href="03-building-your-1st-operator.html#updating-install-modes">Updating install modes</a>
+  </li>
+</ul>
+  </li>
+  <li class="nav-item" data-depth="2">
+    <button class="nav-item-toggle"></button>
+    <a class="nav-link" href="03-building-your-1st-operator.html#coding-0.0.1">Coding v0.0.1</a>
+<ul class="nav-list">
+  <li class="nav-item" data-depth="3">
+    <a class="nav-link" href="03-building-your-1st-operator.html#adding-actual-code">Adding Actual Code</a>
+  </li>
+  <li class="nav-item" data-depth="3">
+    <a class="nav-link" href="03-building-your-1st-operator.html#defining-crd">Defining the CRD (API)</a>
+  </li>
+</ul>
   </li>
 </ul>
   </li>
@@ -98,25 +134,43 @@
     <a class="nav-link" href="04-deploying-your-operator-manually.html">Deploy your operator manually</a>
 <ul class="nav-list">
   <li class="nav-item" data-depth="2">
-    <a class="nav-link" href="04-deploying-your-operator-manually.html">XYZ</a>
+    <a class="nav-link" href="04-deploying-your-operator-manually.html#running-as-a-deployment">Running as a deployment</a>
+  </li>
+  <li class="nav-item" data-depth="2">
+    <a class="nav-link" href="04-deploying-your-operator-manually.html#checking-out-the-deployment">Checking out the deployment</a>
+  </li>
+  <li class="nav-item" data-depth="2">
+    <a class="nav-link" href="04-deploying-your-operator-manually.html#create-a-cr">Create an instance of our CR</a>
   </li>
 </ul>
   </li>
   <li class="nav-item" data-depth="1">
-    <button class="nav-item-toggle"></button>
     <a class="nav-link" href="05-running-your-operator-locally.html">Running your operator locally</a>
-<ul class="nav-list">
-  <li class="nav-item" data-depth="2">
-    <a class="nav-link" href="05-running-your-operator-locally.html">XYZ</a>
-  </li>
-</ul>
   </li>
   <li class="nav-item" data-depth="1">
     <button class="nav-item-toggle"></button>
     <a class="nav-link" href="06-deploying-your-operator-using-olm.html">Deploy your operator with the Operator Lifecycle Manager</a>
 <ul class="nav-list">
   <li class="nav-item" data-depth="2">
-    <a class="nav-link" href="06-deploying-your-operator-using-olm.html">XYZ</a>
+    <a class="nav-link" href="06-deploying-your-operator-using-olm.html#create-a-bunde-and-image">Create a bundle and its corresponding image</a>
+  </li>
+  <li class="nav-item" data-depth="2">
+    <a class="nav-link" href="06-deploying-your-operator-using-olm.html#create-bundle-index">Creating the Bundle Index</a>
+  </li>
+  <li class="nav-item" data-depth="2">
+    <a class="nav-link" href="06-deploying-your-operator-using-olm.html#install-olm">Install OLM</a>
+  </li>
+  <li class="nav-item" data-depth="2">
+    <a class="nav-link" href="06-deploying-your-operator-using-olm.html#deploy-catalog-source">Deploy a CatalogSource pointing to Bundle Index 0.0.1</a>
+  </li>
+  <li class="nav-item" data-depth="2">
+    <a class="nav-link" href="06-deploying-your-operator-using-olm.html#catalogsource-testing">CatalogSource Testing</a>
+  </li>
+  <li class="nav-item" data-depth="2">
+    <a class="nav-link" href="06-deploying-your-operator-using-olm.html#install-operator-with-kubectl-plugin">Install your operator with a kubectl plugin</a>
+  </li>
+  <li class="nav-item" data-depth="2">
+    <a class="nav-link" href="06-deploying-your-operator-using-olm.html#create-cr">Create an AppDefinition CR</a>
   </li>
 </ul>
   </li>
@@ -125,9 +179,33 @@
     <a class="nav-link" href="07-evolving-your-operator.html">Evolving your operator</a>
 <ul class="nav-list">
   <li class="nav-item" data-depth="2">
-    <a class="nav-link" href="07-evolving-your-operator.html">XYZ</a>
+    <a class="nav-link" href="07-evolving-your-operator.html#updating-the-code">Updating the code</a>
+  </li>
+  <li class="nav-item" data-depth="2">
+    <a class="nav-link" href="07-evolving-your-operator.html#testing-the-new-code">Testing the new code</a>
+  </li>
+  <li class="nav-item" data-depth="2">
+    <a class="nav-link" href="07-evolving-your-operator.html#running-as-normal-deployment">Running v0.0.2 as a normal deployment</a>
+  </li>
+  <li class="nav-item" data-depth="2">
+    <a class="nav-link" href="07-evolving-your-operator.html#create-new-bundle">Create a new operator bundle and it’s corresponding image for version <code>0.0.2</code></a>
+  </li>
+  <li class="nav-item" data-depth="2">
+    <a class="nav-link" href="07-evolving-your-operator.html#create-and-push-new-bundle-index">Create and push the new Bundle Index (<code>0.0.2</code>)</a>
+  </li>
+  <li class="nav-item" data-depth="2">
+    <button class="nav-item-toggle"></button>
+    <a class="nav-link" href="07-evolving-your-operator.html#update-catalog-source">Update the CatalogSource to point to the new Bundle Index</a>
+<ul class="nav-list">
+  <li class="nav-item" data-depth="3">
+    <a class="nav-link" href="07-evolving-your-operator.html#final-tests">Final tests</a>
   </li>
 </ul>
+  </li>
+</ul>
+  </li>
+  <li class="nav-item" data-depth="1">
+    <a class="nav-link" href="08-annexes.html">Annexes</a>
   </li>
 </ul>
   </li>
